# SimpleGraphicsLibrary

./: .gitignore  .gitmodules  CMakeLists.txt
Assets/Materials/Builtin/: Builtin.json
Assets/Meshes/Builtin/: Builtin.json
Assets/Meshes/Configs/Builtin/: Builtin.json
Assets/Meshes/Sources/Cube/: Cube.gltf
Assets/Shaders/Configs/: Shader.Builtin.txt
Assets/Shaders/Configs/Builtin/: Builtin.json
Assets/Shaders/Sources/Buildin/: Shader.Builtin.frag  Shader.Builtin.vert
Assets/Shaders/Sources/Builtin/: Builtin.frag  Builtin.vert  Shader.Builtin.frag  Shader.Builtin.vert
Documents/: EventSystem.md
Editor/: CMakeLists.txt  Editor.cpp  Editor.h
Editor/Source/: RotateCube.cpp  RotateCube.h
Examples/: CMakeLists.txt
Examples/BasicWindow/: main.cpp
Examples/SimpleEvent/: main.cpp
Examples/TestJson/: main.cpp
Launcher/: CMakeLists.txt  Launcher.cpp
Source/: CMakeLists.txt
Source/Core/: BaseMath.h  CMakeLists.txt  CoreModuleAPI.h  DynamicCast.h  Event.h  EventManager.cpp  EventManager.h  IApplication.h  InputManager.cpp  InputManager.h  Mutex.cpp  Mutex.h  UniqueID.h
Source/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  EngineModuleAPI.h  FrameRateController.cpp  FrameRateController.h  Scene.cpp  Scene.h
Source/Framework/: CMakeLists.txt  EngineFrameworkAPI.h
Source/Framework/Actors/: Actor.cpp  Actor.h  BaseObject.h  CameraActor.cpp  CameraActor.h  CubeActor.cpp  CubeActor.h  IObject.h  MeshActor.cpp  MeshActor.h
Source/Framework/Components/: BaseComponent.h  CameraComponent.cpp  CameraComponent.h  Component.h  MeshComponent.cpp  MeshComponent.h  TransformComponent.cpp  TransformComponent.h
Source/Graphics/: Buffer.h  CMakeLists.txt  GraphicsDevice.cpp  GraphicsDevice.h  GraphicsEnums.h  GraphicsModuleAPI.h  GraphicsResource.h  Shader.h  Texture.h
Source/Graphics/API/: GraphicsContext.h  RendererAPI.cpp  RendererAPI.h
Source/Graphics/Backend/OpenGL/: OpenGLDevice.cpp  OpenGLDevice.h
Source/Graphics/Backend/OpenGL/glad/: glad.h
Source/Platform/: CMakeLists.txt  PlatformMoudleAPI.h
Source/Platform/DLL/: DynamicLibrary.h
Source/Platform/DLL/Apple/: AppleDynamicLibrary.cpp
Source/Platform/DLL/Windows/: Win32DynamicLibrary.cpp
Source/Platform/File/: File.cpp  File.h  JsonFile.cpp  JsonFile.h  JsonObject.cpp  JsonObject.h
Source/Platform/Surface/: OpenGLSurface.h  Surface.h
Source/Platform/Surface/Apple/: CocoaOpenGLSurface.h  CocoaOpenGLSurface.mm
Source/Platform/Surface/Windows/: Win32OpenGLSurface.cpp  Win32OpenGLSurface.h
Source/Platform/Window/: PlatformMoudleAPI.h  Window.cpp  Window.h  WindowImpl.h
Source/Platform/Window/Apple/: AppleWindow.mm
Source/Platform/Window/Windows/: WindowsWindow.cpp  WindowsWindow.h
Source/Rendering/: CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.h  RenderModuleAPI.h  Renderer.h
Source/Rendering/Command/: CommandList.h  CommandQueue.h  DrawCall.h  RenderCommand.h
Source/Rendering/Graphics/: GraphicsAPI.h  IGraphicsDevice.h
Source/Rendering/Graphics/Backend/OpenGL/: GLDevice.cpp  GLDevice.h  GLMaterial.cpp  GLMaterial.h  GLMesh.cpp  GLMesh.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  OpenGLDevice.cpp  OpenGLDevice.h  OpenGLDevice_Apple.mm  OpenGLDevice_Win32.cpp  OpenGLShader.cpp  OpenGLShader.h
Source/Rendering/Graphics/Backend/OpenGL/glad/: glad.c  wglext.h
Source/Rendering/Graphics/RHI/: IShader.h  ITexture.h
Source/Rendering/Renderer/: Renderer.cpp  Renderer.h
Source/Rendering/Resource/: IMaterial.h  IMesh.h  IResource.h  IShader.h  ITexture.h
Source/Rendering/Resource/Manager/: ResourceManager.cpp  ResourceManager.h
Source/Rendering/Resource/Manager/Loader/: MaterialLoader.cpp  MaterialLoader.h  MeshLoader.cpp  MeshLoader.h  ShaderLoader.cpp  ShaderLoader.h
Source/System/: CMakeLIsts.txt  EngineSystem.h  ISystem.h  ResourceSystem.cpp  ResourceSystem.h  SystemModuleAPI.h
examples/: CMakeLists.txt
examples/BasicWindow/: main.cpp
examples/SimpleEvent/: main.cpp
include/Core/: Event.h  EventManager.h  Window.h
libs/Core/: CMakeLists.txt
libs/Graphics/: CMakeLists.txt
src/Core/: EventManager.cpp  Window.cpp  WindowImpl.h
src/Platform/Apple/: AppleWindow.mm
src/Platform/Windows/: WindowsWindow.cpp
