project(EnginePlatform)

# 庫匡숭쨌쓺
include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/..
)

# Platform욋
set(Platform_SOURCES 
     ${CMAKE_CURRENT_SOURCE_DIR}/Window/Window.cpp
)

set(Platform_HEADERS
    ${CMAKE_CURRENT_SOURCE_DIR}/Window/Window.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Window/WindowImpl.h
)

# 틱憩宮밑都匡숭
if(WIN32)
    list(APPEND Platform_SOURCES 
        ${CMAKE_CURRENT_SOURCE_DIR}/Window/Windows/WindowsWindow.cpp
    )
elseif(APPLE)
    list(APPEND Platform_SOURCES 
        ${CMAKE_CURRENT_SOURCE_DIR}/Window/Apple/AppleWindow.mm
    )

    set_source_files_properties( ${CMAKE_CURRENT_SOURCE_DIR}/Window/Apple/AppleWindow.mm PROPERTIES COMPILE_FLAGS "-x objective-c++")
endif()

# 눼쉔Core욋
add_library(EnginePlatform STATIC ${Platform_SOURCES} ${Platform_HEADERS})

target_link_libraries(EnginePlatform PRIVATE 
    EngineCore
)

target_include_directories(EnginePlatform PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
)