project(EngineRendering)

# Í·ÎÄ¼þÂ·¾¶
include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}
)

# Rendering¿â
set(Platform_SOURCES 
     ${CMAKE_CURRENT_SOURCE_DIR}/CommandBuffer.cpp
)

set(Platform_HEADERS
   ${CMAKE_CURRENT_SOURCE_DIR}/CommandBuffer.h
)

# ´´½¨Rendering¿â
add_library(EngineRendering STATIC ${Platform_SOURCES} ${Platform_HEADERS})

target_link_libraries(EngineRendering PRIVATE 
    EngineCore
    EngineGraphics
)

target_include_directories(EngineRendering PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
)